--- a/gui/scss/core/_chat.scss
+++ b/gui/scss/core/_chat.scss
@@ -291,9 +291,7 @@
 }
 
 .quick-actions-column {
-    width: 50px;
     background: $light-background-color;
-    border-right: 2px solid $light-background-border;
     height: 100%;
     flex-shrink: 0;
     display: flex;
@@ -533,10 +531,8 @@
 }
 
 .activity-feed-column {
-    width: 275px;
     flex-shrink: 0;
     height: 100%;
-
     overflow-y: scroll;
 
     &::-webkit-scrollbar {
@@ -561,7 +557,6 @@
 
 // Chat Screen
 .viewer-list-column {
-    width: 225px;
     flex-shrink: 0;
     height: 100%;
 
@@ -616,10 +611,10 @@
 .chat-window-column {
     display: flex;
     flex-direction: column;
-    width: 100%;
     height: 100%;
     padding-bottom: 10px;
     background: adjust-color($light-background-color, $red: 15, $green: 15, $blue: 15);
+    flex-grow: 1;
 }
 
 .chat-window {
