--- a/gui/scss/core/_global.scss
+++ b/gui/scss/core/_global.scss
@@ -1730,3 +1730,34 @@ thead th{
 .angular-context-menu {
   min-width: 155px!important;
 }
+
+column-resizer {
+  height: 100%;
+  width: 3px;
+  background: #373c3e;
+  position: relative;
+
+  .resizer-hitbox {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: -5px;
+    right: -5px;
+    z-index: 9999;
+
+    &:hover {
+      cursor: col-resize;
+    }
+  }
+}
+
+#ghostbar {
+  width: 3px;
+  background-color: #373c3e;
+  opacity: 0.5;
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  cursor: col-resize;
+  z-index: 10000
+}
