Improve the activity feed to work properly with the resizer

--- a/gui/app/templates/chat/_chat-messages.html
+++ b/gui/app/templates/chat/_chat-messages.html
@@ -175,7 +175,7 @@
     </div>
   </div>
 
-  <column-resizer on-update="updateLayoutSettings(updatedSettings)" ng-show="settings.showActivityFeed()"></column-resizer>
+  <column-resizer on-update="updateLayoutSettings(updatedSettings); checkEventLabelVisibility()" ng-show="settings.showActivityFeed()"></column-resizer>
 
   <div id="dashboardActivityFeed" class="activity-feed-column" ng-show="settings.showActivityFeed()" ng-style="{'width': layout.dashboardActivityFeed }">
     <div class="activity-feed-header">
@@ -260,6 +260,7 @@
         <div
           style="width: 100%"
           class="activity-message"
+          ng-hide="hideEventLabel"
           ng-bind-html="activity.message"
         ></div>
         <div
