--- a/gui/scss/core/_chat.scss
+++ b/gui/scss/core/_chat.scss
@@ -507,10 +507,33 @@
     overflow-x: hidden;
     font-size: 16px;
     text-overflow: ellipsis;
+    overflow-y: scroll;
+    height: 100%;
+
+    &::-webkit-scrollbar {
+        width: 7px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: transparent;
+        border-radius: 7px;
+    }
+
+    &:hover {
+        &::-webkit-scrollbar-thumb {
+            background-color: #202225;
+        }
+    }
+
     .activity {
         padding: 10px;
         display: flex;
         align-items: center;
+        justify-content: space-between;
         font-size: 13px;
         background: $activity-bg-color;
         border-radius: 7px;
@@ -533,26 +556,6 @@
 .activity-feed-column {
     flex-shrink: 0;
     height: 100%;
-    overflow-y: scroll;
-
-    &::-webkit-scrollbar {
-        width: 7px;
-    }
-
-    &::-webkit-scrollbar-track {
-        background-color: transparent;
-    }
-
-    &::-webkit-scrollbar-thumb {
-        background-color: transparent;
-        border-radius: 7px;
-    }
-
-    &:hover {
-        &::-webkit-scrollbar-thumb {
-            background-color: #202225;
-        }
-    }
 }
 
 // Chat Screen
