Add Custom Quick Actions to the dashboard (#1563)
* Add visibility settings for quick actions

* Add a custom quick actions

* Add position adjustment for the quick actions

* Add an icon picker for the add edit quick actions modal

* Split backend and frontend tasks

* Fix the default icon setting

* Improve styling

* Add a resizer for the dashboard

* Rename the quick action manager

* Revert "Add a resizer for the dashboard"

This reverts commit 1af1cfa6c96c0baf7c2bfcea459ec3f3c2d8a39b.

* Move the frontend event listeners to the service

* Fix resize issues

* Clean up the code

* Update custom quick actions to support custom effect lists

* Fix the trigger prop in the effect list

Co-authored-by: Erik Bigler <erikbigler@gmail.com>

--- a/gui/scss/core/_global.scss
+++ b/gui/scss/core/_global.scss
@@ -99,6 +99,18 @@
   to {opacity: 0.05}
 }
 
+.icon-picker {
+  width: 300px;
+  background: #232325;
+  position: absolute;
+  left: 40px;
+  top: -315px;
+  z-index: 3000;
+  border-radius: 4px;
+  margin: 2px;
+  box-shadow: 5px 5px 21px rgba(0, 0, 0, 0.5);
+}
+
 
 .sticky-top {
   position: sticky;
