--- a/gui/app/templates/chat/_chat-messages.html
+++ b/gui/app/templates/chat/_chat-messages.html
@@ -1,42 +1,5 @@
-<div class="chat-tab-content">
-  <div id="dashboardQuickActions" class="quick-actions-column" ng-style="{'width': layout.dashboardQuickActions }">
-    <button
-      class="quick-action-btn"
-      ng-click="showEditStreamInfoModal()"
-      uib-tooltip="Edit Stream Info"
-      append-tooltip-to-body="true"
-      tooltip-placement="right"
-      aria-label="Edit Stream Info"
-    >
-      <i class="far fa-pencil"></i>
-    </button>
-
-    <button
-      class="quick-action-btn mt-4"
-      uib-tooltip="Give Currency"
-      append-tooltip-to-body="true"
-      tooltip-placement="right"
-      ng-click="showGiveCurrencyModal();"
-      aria-label="Give Currency"
-    >
-      <i class="far fa-coins"></i>
-    </button>
-
-    <button
-      class="quick-action-btn mt-4"
-      uib-tooltip="Open Stream Preview"
-      append-tooltip-to-body="true"
-      tooltip-placement="right"
-      ng-click="popoutStreamPreview()"
-      aria-label="Open Stream Preview"
-    >
-      <i class="far fa-tv-alt"></i>
-    </button>
-
-
-
-
-  </div>
+<div class="chat-tab-content flex">
+  <quick-actions id="dashboardQuickActions" class="quick-actions-column flex flex-col justify-between" ng-style="{'width': layout.dashboardQuickActions }"></quick-actions>
 
   <column-resizer on-update="updateLayoutSettings(updatedSettings)"></column-resizer>
 
