--- a/gui/scss/core/_chat.scss
+++ b/gui/scss/core/_chat.scss
@@ -15,8 +15,6 @@
 .chat-tab-content {
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: row;
     position: relative;
 }
 
@@ -293,11 +291,18 @@
 .quick-actions-column {
     background: $light-background-color;
     height: 100%;
-    flex-shrink: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 8px;
+
+    .quick-actions {
+        width: 100%;
+        min-height: 50%;
+    }
+
+    hr {
+        border-top: 1px solid #53545b;
+        width: 35px;
+        margin-top: auto;
+    }
+
     .quick-action-btn {
         width: 35px;
         height: 35px;
@@ -306,8 +311,8 @@
         background: $activity-bg-color;
         align-items: center;
         justify-content: center;
-        padding: 0;
         border: 0;
+
         &:hover {
             cursor: pointer;
             background: #53545b;
@@ -562,7 +567,6 @@
 .viewer-list-column {
     flex-shrink: 0;
     height: 100%;
-
     overflow-y: scroll;
 
     &::-webkit-scrollbar {
