Make the context menu fully accessible

--- a/gui/app/templates/live-events/_events.html
+++ b/gui/app/templates/live-events/_events.html
@@ -283,7 +283,7 @@
                     friendlyEventTypeName(event.sourceId, event.eventId) : "No
                     Type"}}
                   </td>
-                  <td style="max-width: 135px; min-width: 100px">
+                  <td style="max-width: 180px; min-width: 100px" class="py-4">
                     <sort-tags-row item="event" context="'events'" on-update="eventsService.saveGroup(group); eventsService.saveMainEvents();"></sort-tags-row>
                   </td>
                   <td>
