--- a/gui/app/templates/chat/_commands.html
+++ b/gui/app/templates/chat/_commands.html
@@ -171,7 +171,7 @@
                   text="getPermissionTooltip(command)"
                 ></tooltip>
               </td>
-              <td style="max-width: 135px; min-width: 100px">
+              <td style="max-width: 180px;min-width: 100px" class="py-4">
                 <sort-tags-row item="command" context="'commands'" on-update="commandsService.saveCustomCommand(command); commandsService.refreshCommands();">
                 </sort-tags-row>
               </td>
