Fix event sort tags not saving properly

--- a/gui/app/templates/live-events/_events.html
+++ b/gui/app/templates/live-events/_events.html
@@ -284,7 +284,7 @@
                     Type"}}
                   </td>
                   <td style="max-width: 180px; min-width: 100px" class="py-4">
-                    <sort-tags-row item="event" context="'events'" on-update="eventsService.saveGroup(group); eventsService.saveMainEvents();"></sort-tags-row>
+                    <sort-tags-row item="event" context="'events'" on-update="es.saveEvent(event);"></sort-tags-row>
                   </td>
                   <td>
                     <div>
