Fix the sort tags context menu in edit modals

--- a/gui/scss/core/_helpers.scss
+++ b/gui/scss/core/_helpers.scss
@@ -165,6 +165,10 @@ font-weight: 900;
   justify-content: space-between;
 }
 
+.items-start {
+    align-items: flex-start;
+  }
+
 .items-center {
   align-items: center;
 }
