Add an option to add a new effect before or after another effect

--- a/gui/scss/core/_helpers.scss
+++ b/gui/scss/core/_helpers.scss
@@ -162,13 +162,25 @@ font-weight: 900;
 }
 
 .justify-between {
-  justify-content: space-between;
+    justify-content: space-between;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.justify-end {
+    justify-content: flex-end;
 }
 
 .items-start {
     align-items: flex-start;
-  }
+}
 
 .items-center {
   align-items: center;
 }
+
+.items-end {
+    align-items: flex-end;
+  }
