--- a/gui/app/templates/_preset-effect-lists.html
+++ b/gui/app/templates/_preset-effect-lists.html
@@ -7,7 +7,7 @@
     add-new-button-text="New Preset Effect List"
     on-add-new-clicked="presetEffectListsService.showAddEditPresetEffectListModal()"
     context-menu-options="presetEffectListOptions(item)"
-    no-data-message="No preset effect lists saved saved. You should make one! :)"
+    no-data-message="No preset effect lists saved. You should make one! :)"
     none-found-message="No preset effect lists found."
     search-placeholder="Search preset effect lists"
     test-button="true"
