--- a/gui/app/templates/viewers/_viewers.html
+++ b/gui/app/templates/viewers/_viewers.html
@@ -1,8 +1,11 @@
-<div class="p-6 mx-0 my-6" style="display: flex;flex-direction: row;justify-content: space-between;">
+<div class="p-6 mx-0 my-6 flex justify-between">
     <button ng-click="vs.updateViewers()" class="btn btn-primary">
-        <i class="far fa-sync"></i> Refresh
+        <i class="far fa-sync mr-2"></i> Refresh
     </button>
-    <div style="display: flex; flex-direction: row; justify-content: space-between;">
+    <button ng-click="showImportViewersModal()" class="btn btn-primary ml-2">
+        <i class="fas fa-cloud-download-alt mr-2"></i> Import Viewers
+    </button>
+    <div class="flex justify-between" style="margin-left: auto;">
         <searchbar placeholder-text="Search Firebot viewers..." query="viewerSearch" style="flex-basis: 250px"></searchbar>
     </div>
 </div>
