--- a/gui/app/templates/live-events/_events.html
+++ b/gui/app/templates/live-events/_events.html
@@ -199,7 +199,7 @@
                   <th class="muted">
                     <i class="fas fa-exclamation-square"></i> TYPE
                   </th>
-                  <th class="muted"><i class="fas fa-tag"></i> SORT TAGS</th>
+                  <th class="muted"><i class="fas fa-tag"></i> TAGS</th>
                   <th style="width: 210px"></th>
                   <th></th>
                 </tr>
