--- a/gui/scss/Midnight.scss
+++ b/gui/scss/Midnight.scss
@@ -44,6 +44,8 @@ $sort-tags-bg: #808080;
 
 $toggle-button-off-bg-color: #ffffff;
 
+$change-note-palette-title-color: orange;
+
 // Chat Window
 $chatWhisperColor: #e660f2;
 $chatTextColor: $content-text-color;
