--- a/gui/app/templates/_preset-effect-lists.html
+++ b/gui/app/templates/_preset-effect-lists.html
@@ -1,15 +1,15 @@
 <firebot-item-table
-    items="presetEffectListsService.presetEffectLists"
-    on-items-update="onPresetEffectListsUpdated(items)"
-    headers="headers"
-    sort-tag-context="preset effect lists"
-    orderable="true"
-    add-new-button-text="New Preset Effect List"
-    on-add-new-clicked="presetEffectListsService.showAddEditPresetEffectListModal()"
-    context-menu-options="presetEffectListOptions(item)"
-    no-data-message="No preset effect lists saved. You should make one! :)"
-    none-found-message="No preset effect lists found."
-    search-placeholder="Search preset effect lists"
-    test-button="true"
-    on-test-button-clicked="presetEffectListsService.manuallyTriggerPresetEffectList(itemId)"
+  items="presetEffectListsService.presetEffectLists"
+  on-items-update="onPresetEffectListsUpdated(items)"
+  headers="headers"
+  sort-tag-context="preset effect lists"
+  orderable="true"
+  add-new-button-text="New Preset Effect List"
+  on-add-new-clicked="presetEffectListsService.showAddEditPresetEffectListModal()"
+  context-menu-options="presetEffectListOptions(item)"
+  no-data-message="No preset effect lists saved. You should make one! :)"
+  none-found-message="No preset effect lists found."
+  search-placeholder="Search preset effect lists"
+  test-button="true"
+  on-test-button-clicked="presetEffectListsService.showRunPresetListModal(itemId)"
 ></firebot-item-table>
